fix: modal snowflakes overflow on lower screen size

--- a/app/src/scss/styles.scss
+++ b/app/src/scss/styles.scss
@@ -464,7 +464,7 @@ section {
 
 .superpower {
   display: grid;
-  grid-template-columns: 50% auto auto;
+  grid-template-columns: 1fr auto auto;
   gap: 8px;
 
   p:nth-child(2) {
